add main app stucture

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h1>GTD - Get Things Done App!</h1>
+<app-header />
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <router-outlet />
+    </div>
+  </div>
+</div>
