--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -4,7 +4,7 @@
       class="navbar-brand"
       routerLink="/"
     >
-      GTD
+      Command Center
     </a>
     <button
       class="navbar-toggler"
