--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -8,7 +8,7 @@
     <h5 class="card-title">{{ card.title }}</h5>
     <p class="card-text">{{ card.description }}</p>
     <button
-      class="btn btn-primary"
+      class="btn btn-dark w-100"
       (click)="openCardClick()"
     >
       Open
