--- a/src/app/shared/card-list/card-list.component.html
+++ b/src/app/shared/card-list/card-list.component.html
@@ -3,7 +3,7 @@
     <div class="mb-3 mb-md-0 me-md-3">
       <app-card
         [card]="card"
-        (openCard)="openCardClick(card.id)"
+        (openCard)="openCardClick(card.url)"
       />
     </div>
   }
