--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="navbar navbar-expand-lg bg-body-tertiary"
+  class="navbar navbar-expand-md bg-body-tertiary"
   data-bs-theme="dark"
 >
   <div class="container-fluid">
@@ -27,7 +27,7 @@
       id="navbarContent"
       testId="mobileMenu"
     >
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav me-auto mb-2 mb-md-0">
         @for (navLink of NAV_LINKS; track navLink.id) {
           <li class="nav-item">
             <a
