--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header />
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-12">
       <router-outlet />
     </div>
   </div>
