--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -11,6 +11,7 @@
     <p class="card-text">{{ card.description }}</p>
     <button
       class="btn btn-dark w-100"
+      testId="openCard"
       (click)="openCardClick()"
     >
       Open
