--- a/src/app/inbox/idea/idea.component.html
+++ b/src/app/inbox/idea/idea.component.html
@@ -21,7 +21,7 @@
       >
         <li>
           <a
-            class="dropdown-item"
+            class="dropdown-item dropdown-option"
             testId="assignOption"
             (click)="assignIdea()"
           >
@@ -30,7 +30,7 @@
         </li>
         <li>
           <a
-            class="dropdown-item"
+            class="dropdown-item dropdown-option"
             testId="editOption"
             (click)="editIdea()"
           >
@@ -39,7 +39,7 @@
         </li>
         <li>
           <a
-            class="dropdown-item"
+            class="dropdown-item dropdown-option"
             testId="removeOption"
             (click)="removeIdea()"
           >
