correct AddIdeaForm component

--- a/src/app/inbox/components/add-idea-form/add-idea-form.component.html
+++ b/src/app/inbox/components/add-idea-form/add-idea-form.component.html
@@ -16,7 +16,7 @@
   <button
     id="add-idea-button"
     class="btn btn-outline-success"
-    [disabled]="isSubmitButtonDisabled"
+    [disabled]="!(ideaForm.valid && idea.trim())"
     type="submit"
   >
     Add
