display EmptyList component in inbox

--- a/src/app/inbox/components/inbox-container/inbox-container.component.html
+++ b/src/app/inbox/components/inbox-container/inbox-container.component.html
@@ -18,5 +18,12 @@
         (assign)="assignIdea($event)"
       />
     </div>
+  } @else {
+    <div class="row">
+      <app-empty-list
+        header="No new ideas!"
+        imageAlt="No new ideas"
+      />
+    </div>
   }
 </div>
